ECA-11287: Removed support for ECDSA ImplicitlyCA